ffmpeg-debian (3:0.svn20090119-2) UNRELEASED; urgency=low

  [ Reinhard Tartler ]
  * strighten internal dependencies by using a shlibs.local file
    Closes: #512844, #512466
  * Add breaks on libavutil on earlier versions of libavcodec and
    libavformat. Again because of the ff_gcd -> av_gcd rename. 
    Closes: #512946

  [ Fabian Greffrath ]
  * Enabled Speex decoding via libspeex.

 -- Fabian Greffrath <fabian@debian-unofficial.org>  Wed, 28 Jan 2009 13:45:54 +0100

ffmpeg-debian (3:0.svn20090119-1) experimental; urgency=low

  * New Upstream Version (svn revision 16681 libswscale revision 28341)
  * update Vcs-Git tags. Packaging has now moved to git
  * updates to packaging that faciliate building the unstripped and ubuntu
    variants of this package
  * enable xvmc support

  Upstream Changes:
   - SVQ3 watermark decoding support
   - hybrid WavPack support

 -- Reinhard Tartler <siretart@tauware.de>  Tue, 20 Jan 2009 00:55:26 +0100

ffmpeg-debian (3:0.svn20090110-1) experimental; urgency=low

  * new upstream svn snapshot (svn revision 16508, libswscale revision 28286)
  
  Upstream Changes:
   - RV30 and RV40 decoder
   - QCELP / PureVoice decoder
  
  * removed patch 050_fix_pkgconfig_files.patch. Merged upstream
  * disabled patch 020_visibility_patch. It needs to be adapted to the new
    upstream changes. Hopefully it will get merged into ffmpeg properly.
  * install formats.txt in the libavcodec52 package to document what
    formats this version of ffmpeg has enabled.

 -- Reinhard Tartler <siretart@tauware.de>  Sun, 11 Jan 2009 20:55:48 +0100

ffmpeg-debian (3:0.svn20081115-1) experimental; urgency=low

  * new upstream svn snapshot (svn revision 15824, libswscale revision 27910)
  * bump standards version to version 3.8.0, no changes needed
  * Adjust pkg-files to no longer put unnecessary dependencies in the generated
    .pc files. Closes: #504220

 -- Reinhard Tartler <siretart@tauware.de>  Mon, 10 Nov 2008 21:37:16 +0100
