@@ -1,7 +1,0 @@
-libavutil 49 libavutil49 (>= ${source:Upstream-Version}) | libavutil-unstripped-49 (>= ${source:Upstream-Version})
-libavcodec 52 libavcodec52 (>= ${source:Upstream-Version}) | libavcodec-unstripped-52 (>= ${source:Upstream-Version})
-libavdevice 52 libavdevice52 (>= ${source:Upstream-Version}) | libavdevice-unstripped-52 (>= ${source:Upstream-Version})
-libavformat 52 libavformat52 (>= ${source:Upstream-Version}) | libavformat-unstripped-52 (>= ${source:Upstream-Version})
-libavfilter 0 libavfilter0 (>= ${source:Upstream-Version}) | libavfilter-unstripped-0 (>= ${source:Upstream-Version})
-libpostproc 51 libpostproc51 (>= ${source:Upstream-Version}) | libpostproc-unstripped-51 (>= ${source:Upstream-Version})
-libswscale 0 libswscale0 (>= ${source:Upstream-Version}) | libswscale-unstripped-0 (>= ${source:Upstream-Version}) 
