@@ -9,8 +9,11 @@ ffmpeg-debian (3:0.svn20090119-2) UNRELEASED; urgency=low
 
   [ Fabian Greffrath ]
   * Enabled Speex decoding via libspeex.
+  * Use an alternative approach to achieve strict internal dependencies
+    by calling dh_makeshlibs twice in debian/rules instead of a
+    debian/shlibs.local file.
 
- -- Fabian Greffrath <fabian@debian-unofficial.org>  Wed, 28 Jan 2009 13:45:54 +0100
+ -- Fabian Greffrath <fabian@debian-unofficial.org>  Wed, 28 Jan 2009 15:08:05 +0100
 
 ffmpeg-debian (3:0.svn20090119-1) experimental; urgency=low
 
